--- a/index.html
+++ b/index.html
@@ -1,60 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <title>Frontend Mentor | Product preview card component</title>
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="preview_card">
-        <img
-          srcset="
-            images/image-product-desktop.jpg 600w,
-            images/image-product-mobile.jpg  686w
-          "
-          sizes="(max-width: 767px) 686px, 300px"
-          src="images/image-product-desktop.jpg"
-          alt="A bottle of perfume surrounded by foliage"
-        />
-        <section>
-          <h3>PERFUME</h3>
-          <h1>Gabrielle Essence Eau De Parfum</h1>
-          <p>
-            A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-Creator for the House of CHANEL.
-          </p>
-          <h1 class="offer_price">
-            $149.99 <span class="list_price">$169.99</span>
-          </h1>
-          <button type="button" aria-labelledby="Add to Cart">
-            <object
-              data="images/icon-cart.svg"
-              width="15px"
-              height="15px"
-            ></object
-            >Add to Cart
-          </button>
-        </section>
-      </div>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a
-        href="https://www.frontendmentor.io?ref=challenge"
-        rel="external"
-        target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Naman Joshi</a>.
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
+  <title>Frontend Mentor | Stats preview card component</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
+</head>
+<body>
+
+  Get insights that help your business grow.
+
+  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+  experience, and overall efficiency.
+
+  10k+ companies
+  314 templates
+  12m+ queries
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
+</body>
 </html>
