--- a/index.html
+++ b/index.html
@@ -1,27 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <main class="container">
-    <section class="qr_container">
-      <img src="./images/image-qr-code.png" alt="qr_code" class="qr_code"/>
-       <h1 class="heading">Improve your front-end skills by building projects</h1>
-      <p class="paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </section>
-  </main>
-</body>
+    <title>Frontend Mentor | Interactive rating component</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <!-- Rating state start -->
+    <div class="container">
+      <div class="container__ratings">
+        <div class="container_starimage">
+          <img src="./images/icon-star.svg" alt="Star" />
+        </div>
+        <div class="container_rating_desc">
+          <h1>How did we do?</h1>
+
+          <p>
+            Please let us know how we did with your support request. All
+            feedback is appreciated to help us improve our offering!
+          </p>
+        </div>
+        <div class="numbers">
+          <div class="circle">
+            <input type="radio" id="1" name="1" value="1" />
+            <label for="1">1</label>
+          </div>
+          <div class="circle">
+            <input type="radio" id="2" name="2" value="2" />
+            <label for="2">2</label>
+          </div>
+          <div class="circle">
+            <input type="radio" id="3" name="3" value="3" />
+            <label for="3">3</label>
+          </div>
+          <div class="circle">
+            <input type="radio" id="4" name="4" value="4" />
+            <label for="4">4</label>
+          </div>
+          <div class="circle">
+            <input type="radio" id="5" name="5" value="5" />
+            <label for="5">5</label>
+          </div>
+        </div>
+
+        <button type="submit" class="submit_button" id="submit_btn">
+          Submit
+        </button>
+      </div>
+      <!-- Rating state end -->
+      <!-- Thank you state start -->
+      <div class="thanku_container">
+        <img src="./images/illustration-thank-you.svg" alt="thank_you" />
+        <div class="selected_rating_div">
+          <span class="rating "
+            >You selected <span id="rating"></span> out of 5</span
+          >
+        </div>
+        <h1 class="heading">Thank you!</h1>
+        <p class="paragraph">
+          We appreciate you taking the time to give a rating. If you ever need
+          more support, don’t hesitate to get in touch!
+        </p>
+      </div>
+      <!-- Thank you state end -->
+    </div>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+    <script src="code.js"></script>
+  </body>
 </html>
